changes for the week details